Add support for a server send events http endpoint.
